
	* configure.ac: change the USE_CABAL var to USE_NEW_PKG_FORMAT and
	reflect the change in the package names. Add the all .package.conf
	files to the list of files that configure substitutes into.

	* Makefile.am: change USE_CABAL to USE_NEW_PKG_FORMAT and .cabal to
	.package.conf. Substitute into the .cabal files as well as the package
	files.

2005-07-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/General/General.chs,
	glib/System/Glib/Signals.chs.pp: fix segfaults/fatal errors due to
	unsafe foreign calls on g_signal_handler_disconnect and
	g_source_remove. Make them both use safe calls. However I don't
	understand why they are re-entering Haskell land. Perplexing.

	* gtk/Graphics/UI/Gtk/Multiline/TextIter.chs.pp: change mkTextIter to
	mkTextIterCopy and as the name suggests make it take a copy of the
	iter.

	* gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs.pp: change uses of
	mkTextIter to mkTextIterCopy. This fixes the segfaults due to trying
	to free C stack allocated 'GtkTextIter's.

	* gtk/Graphics/UI/Gtk/TreeList/TreeSelection.chs.pp: take advantage of
	the TreeIter marshaling utility functions. This simplifies the code
	and eliminates the only uses of foreignFree.

	* gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp: make the
	FileChooserButton an instance of the FileChooser interface.

2005-07-21 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs.pp: trivial doc fix.

2005-07-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs.pp: make
	text_buffer_create_mark a safe foreign call since calling it can emit
	a signal.

2005-07-14  Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Abstract/Container.chs: Export 
	ContainerForeachCB.

2005-07-14  Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, gtk/Graphics/UI/Gtk.hs,
	gtk/Graphics/UI/Gtk/Gdk/Pixmap.chs: Added Pixmap as in gdk_pixmap,
	not the deprecated gtk_pixmap.
